Further UI improvements and stat holiday counter - Added no-cache meta tags in html - Reduced textarea height and small input adjustments - Added "!" warning for standby hours with multiple names - UI changes for on-hover prompts - Fixed bug with shift calculation display - Added stat holiday input and error take that into account

--- a/public/style.css
+++ b/public/style.css
@@ -13,6 +13,11 @@ textarea {
 
 select {
   cursor: pointer;
+  margin-inline: 0.5em;
+}
+
+select#customGender {
+  width: 70px;
 }
 
 button {
@@ -146,12 +151,17 @@ input {
   margin-inline: 0.5em;
 }
 
+input.holidays {
+  border: 1px solid black;
+  border-radius: 3px;
+}
+
 .switch {
   position: relative;
   display: inline-block;
   width: 45px;
   height: 22px;
-  margin-inline: 1.5em;
+  margin-inline: 0.5em;
   margin-block: 0.2em;
 }
 
